--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai #中国时区
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://leoj.gitee.io/blog
+url: https://leoj.gitee.io/blog
 root: /blog
 permalink: :year/:month/:day/:title/
 permalink_defaults:
