--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ timezone: Asia/Shanghai #中国时区
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://ejeonline.gitee.io
-root: /blog
+url: https://ejeonline.gitee.io/blog
+root: /blog/
 permalink: :year/:month/:day/:title/
-permalink_defaults:
+permalink_defaults: 
 
 # Directory
 source_dir: source
