--- a/themes/yilia-plus/_config.yml
+++ b/themes/yilia-plus/_config.yml
@@ -221,9 +221,9 @@ snow: false
 ## https://github.com/JoeyBling/live2d-widget.js
 live2d:
   # (关闭请设置为false)
-  enable: false
+  enable: true
   # 模型名称(取值请参考：https://github.com/JoeyBling/hexo-theme-yilia-plus/wiki/live2d%E6%A8%A1%E5%9E%8B%E5%8C%85%E5%B1%95%E7%A4%BA)
-  model: hibiki
+  model: koharu
   display:
     position: right # 显示位置：left/right(default: 'right')
     width: 145  # 模型的长度(default: 150)
